codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__long_command_tool_call_is_truncated.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 80, 20,),)"
---

  Dashboard  ◆ BC             gpt-5-codex ▾   default ▾   default ▾  ● thinking
────────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▌ tool exec printf
 ▌      xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ▌      xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ▌      xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...
 ▌      exit 17 1234ms




╭──────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:37                                                               │
│> Summarize the new shell architecture                                        │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
