codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__long_narrow_approval_keeps_wrapped_actions_visible_and_clickable_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---

  Dashboard  ◆ BC        gpt-5-codex ▾
────────────────────────────────────────
╭──────────────────────────────────────╮
│◆ APPROVAL                            │
│? Run command: printf 'validated safe │
│prefix'; printf 'validated safe       │
│prefix'; printf 'validated safe       │
│prefix'; printf 'validated safe       │
│prefix'; printf 'validated safe       │
│prefix'; printf 'validated safe       │
│prefix'; printf 'validated safe       │
│prefix'; printf 'validated safe       │
│  ↓ more (j/k)                        │
│> 1 Run once                          │
│  2 Deny and interrupt                │
│   e Edit   ? Explain                 │
╰──────────────────────────────────────╯
