codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__long_narrow_approval_scrolled_to_suffix.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---

  Dashboard  ◆ BC        gpt-5-codex ▾
────────────────────────────────────────
╭──────────────────────────────────────╮
│◆ APPROVAL                            │
│  ↑ more (j/k)                        │
│prefix'; printf 'validated safe       │
│prefix'; printf 'validated safe       │
│prefix'; && rm -rf /workspace/        │
│production                            │
│  Reason: Review the full command     │
│  before approving                    │
│  Working directory: /workspace/      │
│  better-codex                        │
│> 1 Run once                          │
│  2 Deny and interrupt                │
│   e Edit   ? Explain                 │
╰──────────────────────────────────────╯
