codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__long_pasted_composer_bottom.snap
---
source: tui/src/app_shell_tests.rs
expression: "buffer_contents(&bottom, area)"
---

  Dashboard  ◆ BC             gpt-5-codex ▾   default ▾   default ▾  ● thinking
────────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
                                                                              │
 ▌ tool exec just test -p codex-tui                                           │
                                                                              │
 ▌ edited 3 files +128 -24                                                    ┃
                                                                              ┃
 ▎ CODEX  The new shell owns the fullscreen surface.                          ┃

╭──────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:844                                                              │
│  R03xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R04xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R05xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R06xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R07xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R08xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R09xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R10xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│  R11TAIL▌                                                                    │
╰──────────────────────────────────────────────────────────────────────────────╯
