codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__mcp_management_catalog_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 110, 36,),)"
---
                                                            │
 ◆ BC                 gpt-5-codex ▾   default ▾  ● thinking │ Sessions │ Agents │ Workspace │ Settings │ Help
────────────────────────────────────────────────────────────│────────────────────────────────━━━━━━━━━━━─────
                                                            │
 ◆ CONVERSATION                                             │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                           │▎● FOCUSED  INTEGRATIONS  2 fields
 ▎ YOU  Create a divergent standalone TUI.                  │▎  Model    Permissions
                                                            │▎  Appearance  ▸ Integrations
 ▎ CODEX  Started a fullscreen app shell backed by app-     │▎mcp inventory refreshed
          server turns.                                     │▎› MCP servers: 2 servers / 3 tools / 1 login n…
 ▎ PLAN  1. Build shell                                     │▎  Plugins: not loaded
         2. Wire transcript                                 │
         3. Render dashboard                                │▎◆ MODEL
                   ╭──────────────────────────────────────────────────────────────────────╮
 ▌ tool exec just t│◆ MCP SERVERS                                                         │
                   │1/2 mcp servers  ↑↓ / j k navigate                                    │
 ▌ edited 3 files +│Login ↵  Disable d  Remove x  Add a  Edit e  Reload r                 │
 ▎ STATUS  mcp mana│> login        github 2 tools                                         │
                   │  bearer       linear 1 tools                                         │
 ▎ CODEX  The new s│                                                                      │
                   │Action: press Enter or l to start oauth login                         │
                   │                                                                      │
                   ╰──────────────────────────────────────────────────────────────────────╯ogin needed
                                                            │▎plugins not loaded
                                                            │▎servers 2
                                                            │▎tools 3
                                                            │
                                                            │▎◆ WORKSPACE
                                                            │▎cwd /workspace/better-codex
                                                            │▎profile managed
╭──────────────────────────────────────────────────────────╮│▎files restricted, net restricted
│◆ MESSAGE  ENTER SEND  SHIFT+ENTER NEWLINE  1:37          ││▎roots none selected
│> Summarize the new shell architecture                    ││
│                                                          ││
│                                                          ││
╰──────────────────────────────────────────────────────────╯│
