codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__mismatched_assistant_stream_does_not_pile_up.snap
---
source: tui/src/app_shell_tests.rs
assertion_line: 5253
expression: "render_shell(&shell, Rect::new(0, 0, 78, 14,),)"
---
  Dashboard  ◆ BC           gpt-5-codex ▾   default ▾   default ▾  ● thinking
──────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ CODEX  The authoritative first answer.

 ▎ CODEX  The second answer streams independently.

╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:37                                                             │
│> Summarize the new shell architecture                                      │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
