codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__narrow_dashboard_truncates_long_plan_lines_without_clipping_steps_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│━━━━━━━━━━━━────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                 │▎Model │ Permissions │ Appearance │Integrations
 ▎ YOU  Create a divergent standalone TUI.        │▎━━━━━━─────────────────────────────────────────
                                                  │▎› Model: gpt-5-codex
 ▎ CODEX  Started a fullscreen app shell backed   │▎  Reasoning: default
          by app-server turns.                    │▎  Service tier: default
 ▎ PLAN  1. Build shell                           │
         2. Wire transcript                       │▎◆ PLAN
         3. Render dashboard                      │▎This deliberately long plan explanation must s…
                                                  │▎x Inspect measurement
 ▌ tool exec just test -p codex-tui               │▎x Truncate styled lines
                                                  │▎> Preserve hit targets
 ▌ edited 3 files +128 -24                        │▎- Verify narrow rendering
                                                  │▎- Final plan row remains visible
 ▎ CODEX  The new shell owns the fullscreen       │
          surface.                                │▎◆ TOOLS
                                                  │▎in progress exec just test -p codex-tui
                                                  │
                                                  │▎◆ EDITS
                                                  │▎3 files +128 -24
                                                  │
                                                  │▎◆ WORKSPACE
                                                  │▎profile managed
                                                  │▎cwd /workspace/better-codex
                                                  │▎files restricted, net restricted
                                                  │▎roots none selected
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││▎◆ TOKENS
│> Summarize the new shell architecture          ││▎input 1k | output 240
│                                                ││▎Context 100% left
│                                                ││
╰────────────────────────────────────────────────╯│
