codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__new_shell_defaults_to_settings_model_regardless_of_legacy_route_state.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28))"
---
                                                  │
 ◆ BC          gpt-5-codex ▾   default ▾  ● ready │ Settings │ Agents │ Workspace │ Sessions │ Help
──────────────────────────────────────────────────│━━━━━━━━━━──────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                 │▎Model │ Permissions │ Appearance │Integrations
                                                  │▎━━━━━━─────────────────────────────────────────
                                                  │▎› Model: gpt-5-codex
                                                  │▎  Reasoning: default
                                                  │▎  Service tier: default
                                                  │
                                                  │▎◆ MODEL
                                                  │▎gpt-5-codex
                                                  │
                                                  │▎◆ TOKENS
                                                  │▎input 0
                                                  │▎output 0
                                                  │▎Context unknown
                                                  │
                                                  │▎◆ INTEGRATIONS
                                                  │▎mcp not loaded
                                                  │▎plugins not loaded
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:1                                  ││▎◆ WORKSPACE
│> Type a message, Shift+Enter for newline       ││▎cwd /workspace/better-codex
│                                                ││▎profile managed
│                                                ││▎files restricted, net restricted
╰────────────────────────────────────────────────╯│
